# binance-alert

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  detector.py  hybrid.py  main.py  notifier.py  rest_client.py  rest_poller.py  store.py  ws_client.py
tests/: test_detector.py  test_hybrid.py  test_notifier.py  test_rate_limiter.py  test_rest_poller.py  test_store.py  test_ws_client.py
