[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-trend-bot"
version = "0.1.0"
description = "Real-time trend screener for Binance USDT-M perpetual futures (WebSocket push, in-memory rolling windows)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.scripts]
binance-trend-bot = "src.main:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
